infrastructure/kubernetes/frontend/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  revisionHistoryLimit: 15
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        app: frontend
      containers:
        - name: frontend
          image: gitlab.praktikum-services.ru:5050/std-014-19/nk-dumplings/dumplings-store-frontend:latest
          imagePullPolicy: Always
          ports:
            - name: frontend
              containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
      imagePullSecrets:
        - name: docker-dumplings-config-secret
