infrastructure/kubernetes/frontend/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "std-014-19.k8s.praktikum-services.tech"
  rules:
    - host: std-014-19.k8s.praktikum-services.tech
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
